Fix overflow issue in kmom03 and add css to minimalistic kmom04

--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -13,7 +13,7 @@
 .row {
     #desinax-vgrid.row();
     // background-color: #0f0;
-    margin-bottom: 12px;
+    margin-bottom: @magicNumber / 2;
 }
 
 .inner-wrap {
